--- a/src/styles/ListScreen.css
+++ b/src/styles/ListScreen.css
@@ -4,9 +4,10 @@
     margin: auto;
     box-shadow: 0px 0px 10px 1px rgb(0, 0, 0, 0.5);
     border-radius: 12px;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     padding: 2%;
     margin-top: 4%;
     overflow-y: scroll;
@@ -44,6 +45,7 @@
     padding-top: 2%;
     padding-bottom: 2%;
     border-bottom: 1px solid rgb(0,0,0,0.5);
+    height: 5vh
 }
 
 
